[project]
name = "candleanalysis"
version = "0.1.8"
description = "Module for analysing candlestics in trading"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["candlestics", "trading"]
authors = [
  {email = "75341718+LichtiMi@users.noreply.github.com"},
  {name = "Michael Lichtenegger"}
]
maintainers = [
  {name = "Michael Lichtenegger", email = "75341718+LichtiMi@users.noreply.github.com"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3"
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"
